// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputGroup should render with both elements 1`] = `
<DocumentFragment>
  <div
    class="sc-AxgMl cZbWSE max-w-xs"
  >
    <div
      class="sc-AxiKw sc-AxhCb kpqYkD"
    >
      <span
        data-testid="start"
      >
        $
      </span>
    </div>
    <div
      class="sc-AxiKw sc-AxhUy QmuzF"
    >
      <span
        data-testid="end"
      >
        $
      </span>
    </div>
    <input
      class="sc-AxjAm fsLfB overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 pl-13"
      data-testid="Input"
      placeholder="Amount"
      type="text"
    />
  </div>
</DocumentFragment>
`;

exports[`InputGroup should render with element on the left 1`] = `
<DocumentFragment>
  <div
    class="sc-AxgMl cZbWSE max-w-xs"
  >
    <div
      class="sc-AxiKw sc-AxhCb kpqYkD"
    >
      <span
        data-testid="start"
      >
        $
      </span>
    </div>
    <input
      class="sc-AxjAm fsLfB overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 pl-13"
      data-testid="Input"
      placeholder="Amount"
      type="text"
    />
  </div>
</DocumentFragment>
`;

exports[`InputGroup should render with element on the right 1`] = `
<DocumentFragment>
  <div
    class="sc-AxgMl cZbWSE max-w-xs"
  >
    <div
      class="sc-AxiKw sc-AxhUy QmuzF"
    >
      <span
        data-testid="end"
      >
        $
      </span>
    </div>
    <input
      class="sc-AxjAm fsLfB overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 pl-13"
      data-testid="Input"
      placeholder="Amount"
      type="text"
    />
  </div>
</DocumentFragment>
`;
